fix: dark mode in login and signup page

--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -37,3 +37,7 @@ footer {
 	align-items: center;
 	font-size: 32px;
 }
+
+:not(:defined) {
+    visibility: hidden;
+}
